// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFocusStyle() should return correct css for opts: { inset: '-4px -2px', borderRadius: '6px' } 1`] = `
{
  "&:focus::after": {
    "border": "2px solid #1A44EA",
    "borderRadius": "6px",
    "content": """",
    "inset": "-4px -2px",
    "pointerEvents": "none",
    "position": "absolute",
  },
  "&:focus:not(:focus-visible)::after": {
    "borderColor": "transparent",
  },
  "outline": 0,
  "position": "relative",
}
`;

exports[`getFocusStyle() should return correct css for opts: { inset: 'medium', borderRadius: 'medium' } 1`] = `
{
  "&:focus::after": {
    "border": "2px solid #1A44EA",
    "borderRadius": "8px",
    "content": """",
    "inset": "-6px",
    "pointerEvents": "none",
    "position": "absolute",
  },
  "&:focus:not(:focus-visible)::after": {
    "borderColor": "transparent",
  },
  "outline": 0,
  "position": "relative",
}
`;

exports[`getFocusStyle() should return correct css for opts: { inset: 'small', borderRadius: 'small' } 1`] = `
{
  "&:focus::after": {
    "border": "2px solid #1A44EA",
    "borderRadius": "4px",
    "content": """",
    "inset": "-4px",
    "pointerEvents": "none",
    "position": "absolute",
  },
  "&:focus:not(:focus-visible)::after": {
    "borderColor": "transparent",
  },
  "outline": 0,
  "position": "relative",
}
`;

exports[`getFocusStyle() should return correct css for opts: { inset: undefined, borderRadius: undefined } 1`] = `
{
  "&:focus::after": {
    "border": "2px solid #1A44EA",
    "borderRadius": "4px",
    "content": """",
    "inset": "-4px",
    "pointerEvents": "none",
    "position": "absolute",
  },
  "&:focus:not(:focus-visible)::after": {
    "borderColor": "transparent",
  },
  "outline": 0,
  "position": "relative",
}
`;
